# filecoin-data-portal

./: .cursorrules  .gitignore  .nojekyll  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  FUNDING.json  Makefile  README.md  _quarto.yml  custom.css  fleek.config.json  index.html  index.qmd  listings.json  pyproject.toml  requirements.txt  robots.txt  sample.html  sandbox.html  search.json  sitemap.xml  sp.html
.devcontainer/: devcontainer.json
.qmd/: .gitignore  index.yml
analysis/: 2023-05-15 Exploring Filecoin Deals.html  2023-05-15 Exploring Filecoin Deals.ipynb  2023-06-13 Filecoin Plus.html  2023-06-13 Filecoin Plus.ipynb  2023-06-14 Filecoin JSON-RPC.html  2023-06-14 Filecoin JSON-RPC.ipynb
bot/: .gitignore  package-lock.json  package.json  tsconfig.json
dashboards/: deals.html  deals.ipynb  network_power.html  network_power.ipynb  storage_providers.html  storage_providers.ipynb
data/: IPFS_CID  export.html  locs.html  sandbox.html  storage_provider_labels.csv
datasets/: fil_token_data.py
dbt/: dbt_project.yml  profiles.yml
docs/: data-sources.html  data-sources.md  index.html
evidence/: .gitignore  evidence.plugins.yaml  package-lock.json  package.json
fdp/: __init__.py  api.py  assets.py  cli.py  datasets.py  db.py  definitions.py  docs.py  google.py  http.py  materialize.py  publish.py  resources.py  selectors.py  show.py  status.py  test.py
filda/: spacescope.py
fildata/: deals.py  spacescope.py
legacy/: .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml
legacy/dbt/: dbt_project.yml  profiles.yml
legacy/dbt/macros/: create_or_replace_table.sql  filecoin_periodic_metrics.sql
legacy/dbt/models/: filecoin_allocators.sql  filecoin_allocators_datacap_allowances.sql  filecoin_clients_datacap_allowances.sql  filecoin_daily_clients_metrics.sql  filecoin_daily_storage_providers_metrics.sql  filecoin_daily_transactions.sql  filecoin_onramps.sql  filecoin_state_market_deals.sql  foc_daily_metrics.sql  foc_pay_payers.sql  foc_pay_tokens.sql  models.yml
legacy/dbt/models/metrics/: filecoin_weekly_metrics.sql
legacy/fdp/: db.py  resources.py
legacy/fdp/apis/: assets.py  definitions.py  fevm.py  goldsky.py
legacy/fdp/bigquery/: assets_lily.py  resources.py
legacy/fdp/datacapstats/: assets.py
legacy/fdp/dbt/: assets.py  definitions.py
legacy/fdp/spacescope/: assets.py  definitions.py  resources.py
next/: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
next/assets/main/: clients.sql  filecoin_clients.sql  filecoin_daily_storage_provider_metrics.sql  storage_providers.sql
next/assets/main/beta/: filecoin_clients.sql  filecoin_daily_client_metrics.sql  filecoin_daily_core_metrics.sql  filecoin_storage_providers.sql
next/assets/main/beta/daily/: filecoin_core_metrics.sql  filecoin_pay_operator_metrics.sql  filecoin_storage_providers_metrics.sql
next/assets/main/daily/: clients_metrics.sql  filecoin_pay_operators_metrics.sql  network_metrics.sql  storage_providers_metrics.sql
next/assets/main/filecoin_pay/: rails.sql
next/assets/main/foc/: filecoin_pay_rail_rate_intervals.sql  filecoin_pay_rails.sql  filecoin_warm_storage_datasets.sql  pdp_service_providers.sql
next/assets/main/pdp/: service_providers.sql
next/assets/main/warm_storage/: datasets.sql
next/assets/model/: fevm_daily_checkpoints.sql
next/assets/model/daily/: filecoin_pay_arr.sql  verified_claims.sql
next/assets/model/filecoin_pay/: rail_rate_intervals.sql  rails.sql
next/assets/model/storage_provider/: current_power.sql  market_deal_activity.sql
next/assets/model/warm_storage/: daily_activity.sql  datasets.sql
next/assets/raw/: filecoin_clients.py  filecoin_storage_providers.py  verified_registry_claims.py  verified_registry_claims.sql
next/assets/raw/daily/: network_activity_by_method.py  network_activity_by_method.sql  sector_lifecycle.py  sector_lifecycle.sql  verified_data_onboarded.py  verified_data_onboarded.sql
next/assets/raw/datacapstats/: allocators.py  verified_client_allowances.py  verified_clients.py
next/assets/raw/fevm/: contract_registry.py  eth_logs.py  eth_logs_decoded.py
next/assets/raw/foc/: filecoin_pay_rail_rate_intervals.sql  filecoin_pay_rails.sql  filecoin_warm_storage_datasets.sql
next/assets/raw/storage_provider/: current_info.py  current_power.py  current_power.sql  market_deal_activity.py  market_deal_activity.sql  power.py  power.sql  sector_lifecycle.py  sector_lifecycle.sql  verified_claims.py  verified_claims.sql
next/docs/fdp/: assets.md  tests.md
next/fdp/: __init__.py  api.py  assets.py  bigquery.py  cli.py  docs.py  inspect.py  materialize.py  publish.py  selectors.py  show.py  status.py  tabular.py  test.py
next/fdp/resources/bigquery/: __init__.py
next/fdp/targets/: __init__.py  gsheet.py  r2.py
notebooks/: 2023-05-15 Exploring Filecoin Deals.html  2023-05-15 Exploring Filecoin Deals.ipynb  2023-06-13 Filecoin Plus.html  2023-06-13 Filecoin Plus.ipynb  2023-06-13-Filecoin-Plus.html  2023-06-13-Filecoin-Plus.ipynb  2023-06-14 Filecoin JSON-RPC.html  2023-06-14 Filecoin JSON-RPC.ipynb  2023-06-14-Filecoin JSON-RPC.html  2023-06-14-Filecoin JSON-RPC.ipynb  2023-06-21-Exploring-Filecoin-Deals.html  2023-06-22-Reputation-Data.html  2023-06-22-Reputation-Data.ipynb  2023-07-03-Storage-Providers-Location.html  2023-12-12-Miner-Sector-Information.html
numbers/: README.md  observablehq.config.js  package-lock.json  package.json
portal/: _quarto.yml  about.md  dashboards.md  data.md  index.qmd
pulse/: README.md  evidence.config.yaml  package-lock.json  package.json  svelte.config.js
reports/: 2023-06-13-Filecoin-Plus.html  2023-06-14-Filecoin JSON-RPC.html  2023-06-21-Exploring-Filecoin-Deals.html  2023-06-22-Reputation-Data.html  2023-06-22-Reputation-Data.ipynb  2023-09-29-Storage-Providers-Location.html  2023-09-29-Storage-Providers-Location.ipynb  deals.html  deals.ipynb  sample.html  storage_providers.html  storage_providers.ipynb
src/: spacescope_api.py
tools/: bq_query.py  md_query.py
web/: .gitignore  AGENTS.md  astro.config.mjs  (+3 more)
(+255 files in other folders)
