[project]
name = "fdp"
version = "2.0.0"
readme = "README.md"
authors = [{ name = "David Gasquez", email = "davidgasquez@gmail.com" }]
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.5.3",
    "eth-utils>=6.0.0",
    "google-auth>=2.55.0",
    "google-cloud-bigquery>=3.42.0",
    "google-cloud-bigquery-storage>=2.39.0",
    "gspread>=6.2.1",
    "httpx>=0.28.1",
    "multiaddr>=0.2.0",
    "polars>=1.41.2",
    "pyarrow>=24.0.0",
    "pyoso>=0.9.0",
    "pytz>=2026.2",
    "web3>=7.16.0",
]

[project.scripts]
fdp = "fdp.cli:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.14.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "fdp"
module-root = ""

[dependency-groups]
dev = [
    "prek>=0.4.5",
    "ruff>=0.15.17",
    "ty>=0.0.49",
]

[tool.ruff]
preview = true

[tool.ruff.lint]
select = [
    "E",      # pycodestyle (error)
    "W",      # pycodestyle (warning)
    "F",      # pyflakes
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "I",      # isort
    "UP",     # pyupgrade
    "PIE",    # flake8-pie
    "PGH",    # pygrep-hooks
    "PYI",    # flake8-pyi
    "RUF",    # ruff
    "RUF067", # non-empty-init-module
]
