[project]
name = "fdp"
version = "1.0.0"
authors = [{ name = "David Gasquez" }]
dependencies = [
    "altair>=6.0.0",
    "dagster>=1.13.1",
    "dagster-dbt>=0.29.1",
    "dagster-duckdb-pandas>=0.29.1",
    "dagster-gcp>=0.29.1",
    "dbt-core>=1.11.8",
    "dbt-duckdb>=1.10.1",
    "duckdb>=1.5.2",
    "google-cloud-bigquery-storage>=2.37.0",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "marimo[lsp,recommended,sql]>=0.23.2",
    "pandas>=2.3.3",
    "polars>=1.40.0",
    "pyarrow>=23.0.1",
    "web3>=7.15.0",
]
requires-python = ">=3.13, <3.14"
readme = "README.md"
license = { text = "MIT" }

[dependency-groups]
dev = [
    "dagster-webserver>=1.13.1",
    "ipykernel>=7.2.0",
    "prek>=0.3.9",
    "pyarrow-stubs>=20.0.0.20251215",
    "ruff>=0.15.11",
    "ty>=0.0.32",
]

[project.urls]
Homepage = "https://filecoindataportal.xyz/"
Changelog = "https://github.com/davidgasquez/filecoin-data-portal/commits/main/"
Issues = "https://github.com/davidgasquez/filecoin-data-portal/issues"
CI = "https://github.com/davidgasquez/filecoin-data-portal/actions"

[tool.setuptools]
packages = ["fdp"]

[tool.dagster]
module_name = "fdp.definitions"
code_location_name = "fdp"

[tool.pyright]
reportUnknownMemberType = false
